Created new script

--- a/HelloWorld/new_file.html
+++ b/HelloWorld/new_file.html
@@ -1,5 +1,7 @@
 <!DOCTYPE HTML>
   <html>
     <head>Привет, мир</head>
-    <body></body>
+    <body>
+      <script async src = "new_file.js"></script>
+    </body>
   </html>
