New version with button and confirm
Signed-off-by: badagova <jenny_bad@mail.ru>

--- a/HelloWorld/new_file.html
+++ b/HelloWorld/new_file.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
   <html>
-    <head>Привет, мир</head>
+    <head>
+      <meta charset = 'UTF-8' /> 
+      Привет, мир</head>
     <body>
       <script async src = "new_file.js"></script>
+      <button id="button">Push me</button>
     </body>
   </html>
