Signed-off-by: badagova <jenny_bad@mail.ru>

--- a/HelloWorld/new_file.html
+++ b/HelloWorld/new_file.html
@@ -5,6 +5,7 @@
       Привет, мир</head>
     <body>
       <script async src = "new_file.js"></script>
+      <link href="https://vk.com/feed" />
       <button id="button">Push me</button>
     </body>
   </html>
