Add style for h1

--- a/Porcellino/Index.html
+++ b/Porcellino/Index.html
@@ -2,10 +2,14 @@
   <html>
     <head>
       <meta charset = 'UTF-8' /> 
+      <link rel = "stylesheet" href = "Styles.css" />
       <title>Il Porcellino</title>
     </head>
     <body>
-      <header></header>
+      <header>
+        <h1>Итальянская лавка Il Porcellino</h1>
+      </header>
+      
       <footer></footer>
     </body>
   </html>
